# tempoGAN

./: CMakeLists.txt  Doxyfile.in  INSTALLING  README.md
resources/: res.qrc
scenes/: apic01_simple.py  fire.py  flip01_simple.py  flip02_surface.py  flip03_gen.py  flip04_adaptDt.py  flip05_nbflip.py  flip06_obstacle.py  freesurface.py  guiding_2d.py  guiding_3d01_low.py  guiding_3d02_high.py  karman.py  lidDrivenCavity.py  movingObstacle.py  numpy_array_simple.py  plume_2d.py  plume_adaptDt.py  simpleplume.py  surfaceTension.py  surfaceTurbulence.py  turbulence.py  waveEquation.py  waveletTurbulence.py  waveletTurbulenceObs.py
source/: commonkernels.h  conjugategrad.cpp  conjugategrad.h  edgecollapse.cpp  edgecollapse.h  fastmarch.cpp  fastmarch.h  fluidsolver.cpp  fluidsolver.h  general.cpp  general.h  grid.cpp  grid.h  grid4d.cpp  grid4d.h  kernel.cpp  kernel.h  levelset.cpp  levelset.h  mesh.cpp  mesh.h  movingobs.cpp  movingobs.h  multigrid.cpp  multigrid.h  noisefield.cpp  noisefield.h  particle.cpp  particle.h  shapes.cpp  shapes.h  test.cpp  timing.cpp  timing.h  turbulencepart.cpp  turbulencepart.h  vortexpart.cpp  vortexpart.h  vortexsheet.cpp  vortexsheet.h
source/fileio/: iogrids.cpp  iomeshes.cpp  ioparticles.cpp  mantaio.h
source/gui/: customctrl.cpp  customctrl.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  meshpainter.cpp  meshpainter.h  painter.cpp  painter.h  particlepainter.cpp  particlepainter.h  qtmain.cpp  qtmain.h
source/nopython/: manta.h  pclass.cpp  pclass.h
source/plugin/: advection.cpp  apic.cpp  extforces.cpp  fire.cpp  flip.cpp  fluidguiding.cpp  initplugins.cpp  kepsilon.cpp  meshplugins.cpp  numpyconvert.cpp  pressure.cpp  surfaceturbulence.cpp  tfplugins.cpp  vortexplugins.cpp  waveletturbulence.cpp  waves.cpp
source/preprocessor/: code.cpp  code.h  codegen_kernel.cpp  codegen_python.cpp  main.cpp  merge.cpp  parse.cpp  prep.h  tokenize.cpp  tokenize.h  util.cpp  util.h
source/pwrapper/: manta.h  numpyWrap.cpp  numpyWrap.h  pclass.cpp  pclass.h  pconvert.cpp  pconvert.h  pvec3.cpp  pymain.cpp  pythonInclude.h  registry.cpp  registry.h
source/python/: defines.py
source/util/: integrator.h  interpol.h  interpolHigh.h  mcubes.h  quaternion.h  randomstream.h  rcmatrix.h  simpleimage.cpp  simpleimage.h  solvana.h  vector4d.cpp  vector4d.h  vectorbase.cpp  vectorbase.h
tensorflow/data/: readme.txt
tensorflow/data/test_0001/: dummy.txt
tensorflow/datagen/: gen_sim_2006.py  gen_sim_3006.py  gen_sim_3dtraining.py  gen_sim_data.py
tensorflow/example0_simple/: README.txt  manta_genSimSimple.py  tf_simple.py
tensorflow/example1_smoke_tiled/: README.txt  manta_genSimData.py  runTests.sh  tf_genManySims.py  tf_train.py  tf_train_keras.py  tilecreator.py
tensorflow/example2_liquid/: README.txt  manta_flip.py  manta_gendata.py  manta_mlflip.py  runTests.sh  tf_datasets.py  tf_network.py  tf_train.py
tensorflow/tempoGAN/: README.txt  example_run_output.py  example_run_training.py  tempoGAN.py
tensorflow/tools/: GAN.py  README_TileCreator.txt  fluiddataloader.py  paramhelpers.py  tc_test.py  tilecreator_t.py  uniio.py
tools/: getGitVersion.py
tools/cmake/: FindHoudini.cmake  FindOpenVDB.cmake  FindTBB.cmake
tools/maya/: AEbobjFluidObjectTemplate.mel  AEfluidGridObjectTemplate.mel  Makefile  README.txt  bobjFluidObject.cpp  bobjloader.mll  bobjloader.vcxproj  buildconfig.linux  buildconfig.osx  createBobjLoader.mel  createDensityLoader.mel  densityloader.cpp  densityloader.mll  densityloader.vcxproj  mayaplugins.sln
tools/testdata/: readme.txt
tools/testdataDouble/: readme.txt
tools/tests/: helperBuildInfo.py  helperGeneric.py  helperInclude.py  quickRunTfTests.py  reader.py  runTests.py  test_0010_io.py  test_0011_inverted.py  test_0020_shapes.py  test_0030_gridop.py  test_0032_grid4dop.py  test_0040_interpol2d.py  test_0041_interpol3d.py  test_0042_interpol4d.py  test_0050_meshload.py  test_0100_psolve.py  test_0110_mgsolve.py  test_0150_advect.py  test_0500_pdataop.py  test_1010_plume2d.py  test_1020_uvs.py  test_1030_waveeq.py  test_1040_secOrderBnd.py  test_1050_guiding2d.py  test_1070_flip2d.py  test_1075_secorderBndFlip.py  test_1080_ldc.py  test_2005_symmAdv.py  test_2010_plume3d.py  test_2011_plume3d_open.py  test_2020_obstacle.py  test_2025_turb.py  test_2045_fallingDrop.py  test_2050_freesurface.py  test_2065_partIo.py  test_2070_falldropFlip.py  test_2075_flipBrdam.py  test_2080_nb.py  test_2100_surfTurb.py
